--- a/package.json
+++ b/package.json
@@ -1,17 +1,21 @@
 {
-  "name": "react-color",
+  "name": "@bahouse/react-color",
   "version": "2.19.3",
   "description": "A Collection of Color Pickers from Sketch, Photoshop, Chrome & more",
   "main": "lib/index.js",
   "module": "es/index.js",
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com/",
+    "access": "public"
+  },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/casesandberg/react-color.git"
+    "url": "git+https://github.com/bahouse/react-color.git"
   },
   "author": "case <case@casesandberg.com>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/casesandberg/react-color/issues"
+    "url": "https://github.com/bahouse/react-color/issues"
   },
   "scripts": {
     "test": "npm run jest && npm run eslint",
